--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ chardet==4.0.0
 defusedxml==0.7.1
 Django==3.2.3
 django-allauth==0.41.0
+django-crispy-forms==1.11.2
 idna==2.10
 oauthlib==3.1.0
 python3-openid==3.2.0
