--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,15 @@ chardet==4.0.0
 defusedxml==0.7.1
 Django==3.2.3
 django-allauth==0.41.0
+django-countries==7.2.1
 django-crispy-forms==1.11.2
 idna==2.10
 oauthlib==3.1.0
+Pillow==8.2.0
 python3-openid==3.2.0
 pytz==2021.1
 requests==2.25.1
 requests-oauthlib==1.3.0
 sqlparse==0.4.1
+stripe==2.57.0
 urllib3==1.26.5
