--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,16 @@ asgiref==3.3.4
 certifi==2020.12.5
 chardet==4.0.0
 defusedxml==0.7.1
+dj-database-url==0.5.0
 Django==3.2.3
 django-allauth==0.41.0
 django-countries==7.2.1
 django-crispy-forms==1.11.2
+gunicorn==20.1.0
 idna==2.10
 oauthlib==3.1.0
 Pillow==8.2.0
+psycopg2-binary==2.8.6
 python3-openid==3.2.0
 pytz==2021.1
 requests==2.25.1
