--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.3.4
+boto3==1.17.90
+botocore==1.20.90
 certifi==2020.12.5
 chardet==4.0.0
 defusedxml==0.7.1
@@ -7,15 +9,20 @@ Django==3.2.3
 django-allauth==0.41.0
 django-countries==7.2.1
 django-crispy-forms==1.11.2
+django-storages==1.11.1
 gunicorn==20.1.0
 idna==2.10
+jmespath==0.10.0
 oauthlib==3.1.0
 Pillow==8.2.0
 psycopg2-binary==2.8.6
+python-dateutil==2.8.1
 python3-openid==3.2.0
 pytz==2021.1
 requests==2.25.1
 requests-oauthlib==1.3.0
+s3transfer==0.4.2
+six==1.16.0
 sqlparse==0.4.1
 stripe==2.57.0
 urllib3==1.26.5
